# case-search

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: backend-test.yaml  test.yaml
backend/: Dockerfile
backend/api/: __init__.py  routes.py  utilities.py
backend/schemas/: case.py
backend/tests/: backend.py  test.py
backend/tests/resources/: export.ris
scripts/: format-and-check-backend.ps1
tests/backend/: backend.py
