[tool.poetry]
name = "case-search"
version = "0.1.0"
description = "A tool for researching legal cases and collecting citation information for Zotero."
authors = ["Salim Ingram <salim.ingram@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/salim-ingram/case-search"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
bandit = "^1.7.5"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
jsonschema = "^4.18.0"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[tool.poetry.group.frontend.dependencies]
solara = "^1.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
