[tool.poetry]
name = "case-search"
version = "0.1.0"
description = "A tool for researching legal cases and collecting citation information for Zotero."
authors = ["Salim Ingram <salim.ingram@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/salim-ingram/case-search"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
jsonschema = "^4.18.0"
types-requests = "^2.31.0.1"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
